--- a/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Patreon.razor
@@ -26,19 +26,33 @@
 		</div>
 	</div>
 
-	<h1 style="font-size: 23px; margin-top: 50px;">
+	<h1 style="font-size: 18px; margin-top: 50px; margin-bottom: 15px;">
 		@Herramientas.Idiomas.CogerCadena(idioma, "String2", "Patreon")
 	</h1>
 
-	<hr>
+	<div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;">
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+			<div>
+				@Herramientas.Idiomas.CogerCadena(idioma, "String3", "Patreon")
+			</div>
 
-	<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
-		<div style="font-size: 18px;">
-			@Herramientas.Idiomas.CogerCadena(idioma, "String3", "Patreon")
+			<hr />
+
+			<div>
+				@Herramientas.Idiomas.CogerCadena(idioma, "String4", "Patreon")
+			</div>
 		</div>
 
-		<div style="margin-top: 5px;">
-			@Herramientas.Idiomas.CogerCadena(idioma, "String4", "Patreon")
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
+			<div>
+				@Herramientas.Idiomas.CogerCadena(idioma, "String5", "Patreon")
+			</div>
+
+			<hr />
+
+			<div>
+				@Herramientas.Idiomas.CogerCadena(idioma, "String6", "Patreon")
+			</div>
 		</div>
 	</div>
 </div>
