--- a/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Juego.razor
@@ -560,7 +560,7 @@
 
 	private async Task BuscarDlcMaestro()
 	{
-		global::Juegos.Juego nuevoJuego = await APIs.Steam.Juego.CargarDatos(juego.IdSteam.ToString());
+		global::Juegos.Juego nuevoJuego = await APIs.Steam.Juego.CargarDatosJuego(juego.IdSteam.ToString());
 
 		if (nuevoJuego != null)
 		{
@@ -676,7 +676,7 @@
 
 	private async Task ActualizarMediaSteamApi()
 	{
-		global::Juegos.Juego nuevoJuego = await APIs.Steam.Juego.CargarDatos(juego.IdSteam.ToString());
+		global::Juegos.Juego nuevoJuego = await APIs.Steam.Juego.CargarDatosJuego(juego.IdSteam.ToString());
 
 		if (nuevoJuego != null)
 		{
